fix ratio of contrast in dark auror

--- a/css/palettes/auror_dark.scss
+++ b/css/palettes/auror_dark.scss
@@ -35,6 +35,8 @@ $primary-fg: #644e21;
 $secondary: #b0bbd4;
 $secondary-fg: #262d3d;
 
+$min-contrast-ratio: 5;
+
 .btn-primary,
 .btn-outline-primary,
 .btn-ghost-primary {
